# src/laravel-webapi/app/Models/Category.php
@@ -5,7 +5,6 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsToMany;
-use \Illuminate\Database\Eloquent\Relations\HasMany;
 
 class Category extends Model
 {
@@ -49,11 +48,16 @@ class Category extends Model
     }
     */
     /**
-     * このカテゴリに属する商品一覧（1対多）
+     * このカテゴリに属する商品一覧（多対多）
      */
-    public function products()
+    public function products(): BelongsToMany
     {
-        return $this->hasMany(Product::class);
+        return $this->belongsToMany(
+            Product::class,
+            'product_categories',
+            'category_id',
+            'product_id'
+        );
     }
 
     /**
