# src/laravel-webapi/app/Models/Product.php
@@ -4,7 +4,6 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
-use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 use Illuminate\Database\Eloquent\Relations\HasOne;
 
@@ -42,7 +41,7 @@ class Product extends Model
     /**
      * この商品が属するカテゴリ一覧（多対多）
      */
-    /*    public function categories(): BelongsToMany
+    public function categories(): BelongsToMany
     {
         return $this->belongsToMany(
             Category::class,
@@ -50,14 +49,6 @@ class Product extends Model
             'product_id',
             'category_id'
         );
-    }
-    */
-    /**
-     * この商品が属するカテゴリー（多対一）
-     */
-    public function category(): BelongsTo
-    {
-        return $this->belongsTo(Category::class)->select('id', 'name');
     }
 
     /**
@@ -113,6 +104,6 @@ class Product extends Model
      */
     public function belongsToCategory(int $categoryId): bool
     {
-        return $this->categories()->where('category_id', $categoryId)->exists();
+        return $this->categories()->where('categories.id', $categoryId)->exists();
     }
 }
